--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
 # Specifies intentionally untracked files to ignore when using Git
 # http://git-scm.com/docs/gitignore
 
-./server/node_modules/
+./node_modules/
