--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "ionic-native": "2.2.3",
     "ionicons": "3.0.0",
     "rxjs": "5.0.0-beta.12",
-    "zone.js": "0.6.21"
+    "zone.js": "0.6.21",
+    "express": "4.14.0"
   },
   "devDependencies": {
     "@ionic/app-scripts": "^0.0.36",
